[project]
name = "factorysimpy"
version = "0.1.0b3"
description = "A light-weight component library for simulating manufacturing systems, based on SimPy"
authors = [
    { name="Lekshmi P", email="lekshmi20231101@iitgoa.ac.in" },
    { name="Neha Karanjkar", email="nehak@iitgoa.ac.in" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "simpy>=4.1.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://factorysimpy.github.io/FactorySimPy/"
Repository = "https://github.com/FactorySimPy/FactorySimPy"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


